@@ -3,26 +3,26 @@ _Znwm(4) = 0x........
 _ZdlPv(0x........)
 _Znam(20) = 0x........
 _ZdaPv(0x........)
-_ZnwmSt11align_val_t(size 64, al 64) = 0x........
-_ZdlPvSt11align_val_t(0x........)
-_ZnamSt11align_val_t(size 320, al 64) = 0x........
-_ZdaPvSt11align_val_t(0x........)
+_ZnwmSt11align_val_t(64, 64) = 0x........
+_ZdlPvSt11align_val_t(0x........, 64)
+_ZnamSt11align_val_t(320, 64) = 0x........
+_ZdaPvSt11align_val_t(0x........, 64)
 _Znwm(4) = 0x........
-_ZdlPvm(0x........)
+_ZdlPvm(0x........, 4)
 _Znam(20) = 0x........
-_ZdaPvm(0x........)
-_ZnwmSt11align_val_t(size 64, al 64) = 0x........
-_ZdlPvmSt11align_val_t(0x........)
-_ZnamSt11align_val_t(size 320, al 64) = 0x........
-_ZdaPvmSt11align_val_t(0x........)
+_ZdaPvm(0x........, 20)
+_ZnwmSt11align_val_t(64, 64) = 0x........
+_ZdlPvmSt11align_val_t(0x........, 64, 64)
+_ZnamSt11align_val_t(320, 64) = 0x........
+_ZdaPvmSt11align_val_t(0x........, 320, 64)
 _ZnwmRKSt9nothrow_t(4) = 0x........
-_ZdlPvm(0x........)
+_ZdlPvm(0x........, 4)
 _ZnamRKSt9nothrow_t(20) = 0x........
 _ZdaPv(0x........)
-_ZnwmSt11align_val_tRKSt9nothrow_t(size 64, al 64) = 0x........
-_ZdlPvmSt11align_val_t(0x........)
-_ZnamSt11align_val_tRKSt9nothrow_t(size 320, al 64) = 0x........
-_ZdaPvSt11align_val_t(0x........)
+_ZnwmSt11align_val_tRKSt9nothrow_t(64, 64) = 0x........
+_ZdlPvmSt11align_val_t(0x........, 64, 64)
+_ZnamSt11align_val_tRKSt9nothrow_t(320, 64) = 0x........
+_ZdaPvSt11align_val_t(0x........, 64)
 
 HEAP SUMMARY:
     in use at exit: ... bytes in ... blocks
