@@ -3,26 +3,26 @@ _Znwj(4) = 0x........
 _ZdlPv(0x........)
 _Znaj(20) = 0x........
 _ZdaPv(0x........)
-_ZnwjSt11align_val_t(size 64, al 64) = 0x........
-_ZdlPvSt11align_val_t(0x........)
-_ZnajSt11align_val_t(size 320, al 64) = 0x........
-_ZdaPvSt11align_val_t(0x........)
+_ZnwjSt11align_val_t(64, 64) = 0x........
+_ZdlPvSt11align_val_t(0x........, 64)
+_ZnajSt11align_val_t(320, 64) = 0x........
+_ZdaPvSt11align_val_t(0x........, 64)
 _Znwj(4) = 0x........
-_ZdlPvj(0x........)
+_ZdlPvj(0x........, 4)
 _Znaj(20) = 0x........
-_ZdaPvj(0x........)
-_ZnwjSt11align_val_t(size 64, al 64) = 0x........
-_ZdlPvjSt11align_val_t(0x........)
-_ZnajSt11align_val_t(size 320, al 64) = 0x........
-_ZdaPvjSt11align_val_t(0x........)
+_ZdaPvj(0x........, 20)
+_ZnwjSt11align_val_t(64, 64) = 0x........
+_ZdlPvjSt11align_val_t(0x........, 64, 64)
+_ZnajSt11align_val_t(320, 64) = 0x........
+_ZdaPvjSt11align_val_t(0x........, 320, 64)
 _ZnwjRKSt9nothrow_t(4) = 0x........
-_ZdlPvj(0x........)
+_ZdlPvj(0x........, 4)
 _ZnajRKSt9nothrow_t(20) = 0x........
 _ZdaPv(0x........)
-_ZnwjSt11align_val_tRKSt9nothrow_t(size 64, al 64) = 0x........
-_ZdlPvjSt11align_val_t(0x........)
-_ZnajSt11align_val_tRKSt9nothrow_t(size 320, al 64) = 0x........
-_ZdaPvSt11align_val_t(0x........)
+_ZnwjSt11align_val_tRKSt9nothrow_t(64, 64) = 0x........
+_ZdlPvjSt11align_val_t(0x........, 64, 64)
+_ZnajSt11align_val_tRKSt9nothrow_t(320, 64) = 0x........
+_ZdaPvSt11align_val_t(0x........, 64)
 
 HEAP SUMMARY:
     in use at exit: ... bytes in ... blocks
