@@ -1,4 +1,4 @@
 _Znwm(4) = 0x........
-_ZdlPvm(0x........)
+_ZdlPvm(0x........, 4)
 _Znam(20) = 0x........
-_ZdaPvm(0x........)
+_ZdaPvm(0x........, 20)
