@@ -1,4 +1,4 @@
 _Znwj(4) = 0x........
-_ZdlPvj(0x........)
+_ZdlPvj(0x........, 4)
 _Znaj(20) = 0x........
-_ZdaPvj(0x........)
+_ZdaPvj(0x........, 20)
